--- a/index.html
+++ b/index.html
@@ -19,6 +19,42 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <div class="container p-3">
+      <div class="form-group">
+        <label for="">Số thứ nhất:</label>
+        <input
+          type="text"
+          class="form-control"
+          name=""
+          id="txt-number1"
+          aria-describedby="helpId"
+          placeholder=""
+        />
+      </div>
+      <div class="form-group">
+        <label for="">Số thứ hai:</label>
+        <input
+          type="text"
+          class="form-control"
+          name=""
+          id="txt-number2"
+          aria-describedby="helpId"
+          placeholder=""
+        />
+      </div>
+      <div class="form-group">
+        <label for="">Số thứ ba:</label>
+        <input
+          type="text"
+          class="form-control"
+          name=""
+          id="txt-number3"
+          aria-describedby="helpId"
+          placeholder=""
+        />
+      </div>
+      <button class="btn btn-primary" onclick="desc()">Sắp xếp tăng dần</button>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
