--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           name=""
           id="txt-number1"
           aria-describedby="helpId"
-          placeholder=""
+          placeholder="Nhập số"
         />
       </div>
       <div class="form-group">
@@ -39,7 +39,7 @@
           name=""
           id="txt-number2"
           aria-describedby="helpId"
-          placeholder=""
+          placeholder="Nhập số"
         />
       </div>
       <div class="form-group">
@@ -50,10 +50,22 @@
           name=""
           id="txt-number3"
           aria-describedby="helpId"
-          placeholder=""
+          placeholder="Nhập số"
         />
       </div>
-      <button class="btn btn-primary" onclick="desc()">Sắp xếp tăng dần</button>
+      <div class="form-group">
+        <button class="btn btn-primary" onclick="ascending()">
+          Sắp xếp tăng
+        </button>
+        <input
+          type="text"
+          class="form-control"
+          name=""
+          id="ket-qua"
+          aria-describedby="helpId"
+          placeholder="Kết quả"
+        />
+      </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -72,6 +84,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/baiTap1.js"></script>
   </body>
 </html>
