--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   </head>
   <body>
     <div class="container p-3">
+      <h2 class="">EXE 1</h2>
       <div class="form-group">
-        <label for="">Số thứ nhất:</label>
+        <label for="txt-number1" class="mb-0">Số thứ nhất:</label>
         <input
           type="text"
           class="form-control"
@@ -32,7 +33,7 @@
         />
       </div>
       <div class="form-group">
-        <label for="">Số thứ hai:</label>
+        <label for="txt-number2" class="mb-0">Số thứ hai:</label>
         <input
           type="text"
           class="form-control"
@@ -43,7 +44,7 @@
         />
       </div>
       <div class="form-group">
-        <label for="">Số thứ ba:</label>
+        <label for="txt-number3" class="mb-0">Số thứ ba:</label>
         <input
           type="text"
           class="form-control"
@@ -67,6 +68,33 @@
         />
       </div>
     </div>
+    <!-- End EXE 1 -->
+
+    <!-- Start EXE 2 -->
+    <div class="container p-3">
+      <h2 class="">EXE 2</h2>
+      <!-- Button trigger modal -->
+      
+              <div class="form-group">
+                <label for="" class="mb-0">Thành viên gia đình:</label>
+                <select class="custom-select" name="" id="select-member">
+                  <option selected>Bấm chọn</option>
+                  <option value="1" class="a" id="member1">Bố</option>
+                  <option value="2" class="a" id="member2">Mẹ</option>
+                  <option value="3" class="a" id="member3">Anh trai</option>
+                  <option value="4" class="a" id="member4">Em gái</option>
+                </select>
+              </div>
+            
+              <button class="btn btn-primary" onclick="chao()">
+                Đồng ý
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End EXE 2 -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
@@ -84,6 +112,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/baiTap1.js"></script>
+    <!-- <script src="./js/baiTap1.js"></script> -->
+    <script src="./js/baiTap2.js"></script>
   </body>
 </html>
